--- a/user-service/requirements.txt
+++ b/user-service/requirements.txt
@@ -1,3 +1,5 @@
-Flask==2.1.2
-PyJWT==2.1.0
-Werkzeug==2.1.2
+Flask==2.2.5
+Flask-SQLAlchemy==2.5.1
+SQLAlchemy==1.4.48
+PyJWT==2.6.0
+Werkzeug==2.2.3
